NoSQL Aerospike 자바 연동 예제

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- NoSQL Aerospike -->
+	    <dependency>
+	      <groupId>com.aerospike</groupId>
+		  <artifactId>aerospike-client</artifactId>
+		  <version>5.0.0</version>
+	  	</dependency>
 	</dependencies>
 
 	<build>
